2011-04-29 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* 20_indication.mof.pre.in, Makefile.am, configure.ac
	control.c, interopServerProvider.c, sfcb.cfg.pre.in:
	[ 3190623 ] Set *IsSettable propperties to false for IndicationService

2011-04-28  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3202466 ] Single item on method param of array type rejected via Local
	(patch by Chris Poblete)

	* queryOperation.c: 
	[ 3291646 ] Unused var in __NullEvaluate

2011-04-05 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3213591 ] Local intf client abort abnormally on enum filter syntax err
	(patch by cpoblete)

2011-04-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* queryOperation.c, providerDrv.c
	[ 3261868 ] Enum CQL filter on NULL cause incorrect rsp
	(based on patch by  cpoblete)

2011-03-31  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* elementCapabiltiesProvider.c:
	[ 3265502 ] CMPIContext not released in elementCapabilitiesProvider

2011-03-30 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* queryOperation.c
	[ 3206663 ] Enum CQL filter on NULL cause segfault and incorrect rsp
	(based on patch by  cpoblete)

2011-03-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c, indCIMXMLHandler.c:
	[ 3038078 ] Can create indication filters and destinations w/o key props

2011-03-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	[ 3202420 ] CDATA value in a string property is improperly XML escaped
	(patch by Chris Poblete)

	* httpAdapter.c, sfcBasicPAMAuthentication.c:
	[ 3203290 ] Basic Auth Should Consider Expired Passwords

2011-02-23  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c: 
	[ 3175770 ] execQuery returns multiple instances of same object

2011-02-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* result.c: 
	[ 3185178 ] Wrong classname for returned instances from execQuery
