@@ -1,0 +1,3 @@
+<IMETHODRESPONSE NAME="AssociatorNames">
+!<INSTANCENAME CLASSNAME="CIM_IndicationService">
+
