@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<CIM CIMVERSION="2.0" DTDVERSION="2.0">
+<MESSAGE ID="4711" PROTOCOLVERSION="1.0">
+<SIMPLEREQ><IMETHODCALL NAME="AssociatorNames">
+<LOCALNAMESPACEPATH><NAMESPACE NAME="root"></NAMESPACE>
+<NAMESPACE NAME="interop"></NAMESPACE></LOCALNAMESPACEPATH>
+<IPARAMVALUE NAME="ObjectName"><INSTANCENAME CLASSNAME="SFCB_RegisteredProfile"><KEYBINDING NAME="instanceid"><KEYVALUE VALUETYPE="string">bogus</KEYVALUE></KEYBINDING></INSTANCENAME></IPARAMVALUE>
+</IMETHODCALL></SIMPLEREQ>
+</MESSAGE></CIM>
