@@ -10,6 +10,7 @@ Bugs fixed:
 - 3213591 Local intf client abort abnormally on enum filter syntax err
 - 3291646 Unused var in __NullEvaluate
 - 3202466 Single item on method param of array type rejected via Local
+- 3287789 interopServerProvider not conservative when answering reqs
 
 Changes in 1.3.11
 =================
